--- a/Exercise 2.0.ipynb
+++ b/Exercise 2.0.ipynb
@@ -198,7 +198,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 1,
    "id": "c317513d",
    "metadata": {},
    "outputs": [
@@ -206,14 +206,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "n\n"
+      "nohtyp\n"
      ]
     }
    ],
    "source": [
     "#Write a Python program to reverse a string\n",
     "str=\"python\"\n",
-    "str1=str[-1:]\n",
+    "str1=str[::-1]\n",
     "print(str1)"
    ]
   },
